--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,21 @@
 server:
   port: 8081
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/ipl_leaderboard?serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+    username: tony
+    password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  batch:
+    initialize-schema: always
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+    database: mysql
+    databse-platform: org.hibernate.dialect.MySQL5InnoDBDialect
