--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,13 +1,14 @@
 server:
-  port: 8081
+  port: 5000
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/ipl_leaderboard?serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
-    username: tony
-    password: 1234
+    url: jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
+    username: ${RDS_USERNAME}
+    password: ${RDS_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   batch:
     initialize-schema: always
+    
   jpa:
     hibernate:
       ddl-auto: create
